<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/header_layout" />

    <RelativeLayout
        android:id="@+id/avatarLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/btn_selector"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/avatar" />

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/xiaohei" />


        <ImageView
            android:id="@+id/tv_set_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:drawablePadding="10dp"
            android:src="@drawable/register_bottom_arrow" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/usernameLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/btn_selector"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/username" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="username" />


    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/nicknameLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/btn_selector"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/nickname" />

        <TextView
            android:id="@+id/nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="nickname" />


        <ImageView
            android:id="@+id/tv_set_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:drawablePadding="10dp"
            android:src="@drawable/register_bottom_arrow" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/logoutLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/btn_selector"
        android:padding="10dp">

        <TextView
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="注销" />

    </RelativeLayout>

</LinearLayout>